--- a/style.scss
+++ b/style.scss
@@ -125,12 +125,12 @@ body {
         width: 301px;
       }
 
-      &:focus,
-      &:hover {
-        border: 2px solid hsl(172, 67%, 45%);
-        padding: 13px 16px;
-        background-position: left 16px top 13px;
-      }
+      // &:focus,
+      // &:hover {
+      //   border: 2px solid hsl(172, 67%, 45%);
+      //   padding: 13px 16px;
+      //   background-position: left 16px top 13px;
+      // }
 
       &::placeholder {
         text-align: end;
@@ -146,7 +146,7 @@ body {
   }
   .people {
     input {
-      background-image: url(../images/icon-person.svg);
+      // background-image: url(../images/icon-person.svg);
 
       @media (min-width: 920px) {
         margin-bottom: 0;
