--- a/css/style.css
+++ b/css/style.css
@@ -1,432 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: "Space Mono", monospace;
-  margin: 0;
-  padding: 0;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-body {
-  background-color: #c5e4e7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 50px;
-  height: 100vh;
-}
-
-@media (min-width: 920px) {
-  body {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 0;
-  }
-}
-
-@media (max-width: 320px) {
-  body {
-    height: 100%;
-    padding-bottom: 30px;
-  }
-}
-
-.logo {
-  display: block;
-  margin: 50px auto 40px;
-}
-
-@media (min-width: 920px) {
-  .logo {
-    margin: 0 auto 80px;
-  }
-}
-
-.container {
-  width: 375px;
-}
-
-@media (min-width: 920px) {
-  .container {
-    width: 920px;
-  }
-}
-
-@media (max-width: 320px) {
-  .container {
-    width: 320px;
-  }
-}
-
-.calculator {
-  background-color: white;
-  border-radius: 20px;
-  padding: 35px 33px 32px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media (min-width: 920px) {
-  .calculator {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    padding: 0;
-    height: 480px;
-  }
-}
-
-@media (max-width: 320px) {
-  .calculator {
-    padding: 35px 10px 32px;
-  }
-}
-
-@media (min-width: 920px) {
-  .calculator__count {
-    width: 379px;
-    margin: 48px;
-  }
-}
-
-@media (max-width: 320px) {
-  .calculator__count {
-    width: 301px;
-  }
-}
-
-.calculator__count span {
-  color: #5e7a7d;
-  font-weight: 700;
-  display: block;
-}
-
-.calculator .bill input,
-.calculator .people input {
-  width: 310px;
-  height: 48px;
-  padding: 15px 18px;
-  font-size: 24px;
-  border: none;
-  border-radius: 5px;
-  outline: none;
-  text-align: right;
-  color: #00494d;
-  font-weight: 700;
-  cursor: pointer;
-  background-repeat: no-repeat;
-  background-position: left 18px top 15px;
-  background-size: initial;
-  background-color: #f4fafa;
-  margin-top: 6px;
-  margin-bottom: 35px;
-  -moz-appearance: textfield;
-}
-
-.calculator .bill input::-webkit-outer-spin-button, .calculator .bill input::-webkit-inner-spin-button,
-.calculator .people input::-webkit-outer-spin-button,
-.calculator .people input::-webkit-inner-spin-button {
-  margin: 0;
-  -webkit-appearance: none;
-}
-
-@media (min-width: 920px) {
-  .calculator .bill input,
-  .calculator .people input {
-    width: 379px;
-  }
-}
-
-@media (max-width: 320px) {
-  .calculator .bill input,
-  .calculator .people input {
-    width: 301px;
-  }
-}
-
-.calculator .bill input::-webkit-input-placeholder,
-.calculator .people input::-webkit-input-placeholder {
-  text-align: end;
-  color: #7f9c9f;
-}
-
-.calculator .bill input:-ms-input-placeholder,
-.calculator .people input:-ms-input-placeholder {
-  text-align: end;
-  color: #7f9c9f;
-}
-
-.calculator .bill input::-ms-input-placeholder,
-.calculator .people input::-ms-input-placeholder {
-  text-align: end;
-  color: #7f9c9f;
-}
-
-.calculator .bill input::placeholder,
-.calculator .people input::placeholder {
-  text-align: end;
-  color: #7f9c9f;
-}
-
-.calculator .bill input {
-  background-image: url(../images/icon-dollar.svg);
-}
-
-@media (min-width: 920px) {
-  .calculator .people input {
-    margin-bottom: 0;
-  }
-}
-
-.calculator .tip-percent > span {
-  margin-bottom: 20px;
-}
-
-.calculator .tip-percent__amount {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.calculator .tip-percent__amount .amount-container {
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  font-size: 24px;
-  line-height: 48px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  margin-bottom: 16px;
-}
-
-.calculator .tip-percent__amount .amount-container .input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-.calculator .tip-percent__amount .amount-container .input:checked ~ .checkmark, .calculator .tip-percent__amount .amount-container .input:checked ~ .custom {
-  background-color: #26c0ab;
-  color: #00494d;
-}
-
-.calculator .tip-percent__amount .amount-container .input:focus ~ .checkmark, .calculator .tip-percent__amount .amount-container .input:focus ~ .custom {
-  background-color: #94e5da;
-  color: #00494d;
-}
-
-.calculator .tip-percent__amount .amount-container .checkmark, .calculator .tip-percent__amount .amount-container .custom {
-  display: inline-block;
-  height: 48px;
-  width: 147px;
-  background-color: #00494d;
-  color: white;
-  text-align: center;
-  font-weight: 700;
-  border-radius: 5px;
-  outline: none;
-}
-
-.calculator .tip-percent__amount .amount-container .checkmark:hover, .calculator .tip-percent__amount .amount-container .custom:hover {
-  background-color: #94e5da;
-  color: #00494d;
-}
-
-@media (min-width: 920px) {
-  .calculator .tip-percent__amount .amount-container .checkmark, .calculator .tip-percent__amount .amount-container .custom {
-    width: 117px;
-  }
-}
-
-.calculator .tip-percent__amount .amount-container .custom {
-  background-color: #f4fafa;
-  color: #5e7a7d;
-  border: none;
-  text-align: center;
-  font-size: 24px;
-  outline: none;
-  -moz-appearance: textfield;
-  cursor: pointer;
-}
-
-.calculator .tip-percent__amount .amount-container .custom::-webkit-outer-spin-button, .calculator .tip-percent__amount .amount-container .custom::-webkit-inner-spin-button {
-  margin: 0;
-  -webkit-appearance: none;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:not(:placeholder-shown) {
-  background-color: #26c0ab;
-  color: #00494d;
-  text-align: center;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:focus, .calculator .tip-percent__amount .amount-container .custom:hover {
-  border: 2px solid #26c0ab;
-  color: #00494d;
-  background-color: #f4fafa;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:focus::-webkit-input-placeholder {
-  color: transparent;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:focus:-ms-input-placeholder {
-  color: transparent;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:focus::-ms-input-placeholder {
-  color: transparent;
-}
-
-.calculator .tip-percent__amount .amount-container .custom:focus::placeholder {
-  color: transparent;
-}
-
-.calculator .people {
-  margin-top: 19px;
-}
-
-.calculator .people .spans {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.calculator .people .spans span {
-  display: inline-block;
-}
-
-.calculator .people .spans .error {
-  color: #ed4337;
-  display: none;
-}
-
-.calculator__result {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 327px;
-  height: 257px;
-  background-color: #00494d;
-  border-radius: 15px;
-  padding: 46px 23px 23px;
-  font-weight: 700;
-  color: white;
-}
-
-@media (min-width: 920px) {
-  .calculator__result {
-    width: 413px;
-    height: 417px;
-    padding: 50px 40px 40px;
-  }
-}
-
-@media (max-width: 320px) {
-  .calculator__result {
-    width: 301px;
-  }
-}
-
-.calculator__result .tip {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media (min-width: 920px) {
-  .calculator__result .tip:nth-child(2) {
-    margin-top: -80px;
-  }
-}
-
-.calculator__result .tip__person {
-  display: block;
-  color: #7f9c9f;
-  font-size: 14px;
-}
-
-.calculator__result .tip__result {
-  color: #26c0ab;
-  font-size: 34px;
-}
-
-@media (min-width: 920px) {
-  .calculator__result .tip__result {
-    font-size: 45px;
-  }
-}
-
-.calculator__result .submit {
-  width: 264px;
-  height: 48px;
-  border: none;
-  border-radius: 5px;
-  background-color: #26c0ab;
-  color: #00494d;
-  font-size: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.calculator__result .submit:not(:disabled):hover, .calculator__result .submit:not(:disabled):focus {
-  background-color: #94e5da;
-  outline: none;
-}
-
-.calculator__result .submit:disabled {
-  opacity: 0.3;
-  cursor: unset;
-}
-
-@media (min-width: 920px) {
-  .calculator__result .submit {
-    width: 333px;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/* No CSS *//*# sourceMappingURL=style.css.map */
