--- a/style.scss
+++ b/style.scss
@@ -5,13 +5,7 @@
   font-family: "Space Mono", monospace;
   margin: 0;
   padding: 0;
-  // -webkit-touch-callout: none;
-  // -webkit-user-select: none;
-  // -khtml-user-select: none;
-  // -moz-user-select: none;
-  // -ms-user-select: none;
-  // user-select: none;
-  // -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
