--- a/css/style.css
+++ b/css/style.css
@@ -158,14 +158,6 @@ body {
   }
 }
 
-.calculator .bill input:focus, .calculator .bill input:hover,
-.calculator .people input:focus,
-.calculator .people input:hover {
-  border: 2px solid #26c0ab;
-  padding: 13px 16px;
-  background-position: left 16px top 13px;
-}
-
 .calculator .bill input::-webkit-input-placeholder,
 .calculator .people input::-webkit-input-placeholder {
   text-align: end;
@@ -194,8 +186,20 @@ body {
   background-image: url(../images/icon-dollar.svg);
 }
 
+.calculator .bill input:focus, .calculator .bill input:hover {
+  border: 2px solid #26c0ab;
+  padding: 13px 16px;
+  background-position: left 16px top 13px;
+}
+
 .calculator .people input {
   background-image: url(../images/icon-person.svg);
+}
+
+.calculator .people input:focus, .calculator .people input:hover {
+  border: 2px solid #26c0ab;
+  padding: 13px 16px;
+  background-position: left 16px top 13px;
 }
 
 @media (min-width: 920px) {
